Update Warranty Claims Fraud Prediction.ipynb

--- a/Warranty Claims Fraud Prediction.ipynb
+++ b/Warranty Claims Fraud Prediction.ipynb
@@ -1738,18 +1738,20 @@
     }
    ],
    "source": [
-    "fig, ax = plt.subplots(1,3,figsize=(20,5))\n",
+    "# Step 1: Create a 1x3 grid of subplots with a shared x-axis and y-axis, and set the overall figure size\n",
+    "fig, ax = plt.subplots(1, 3, figsize=(20, 5))\n",
     "\n",
+    "# Step 2: Import the confusion_matrix function from the sklearn.metrics module\n",
     "from sklearn.metrics import confusion_matrix\n",
     "\n",
-    "#confusion matrix for Decision Tree Classifier\n",
-    "sns.heatmap(confusion_matrix(y_test,d_pred), annot=True, cmap='coolwarm', ax=ax[0]).set_title('Decision Tree Classifier')\n",
+    "# Step 3: Generate and display the confusion matrix for the Decision Tree Classifier on the first subplot (leftmost)\n",
+    "sns.heatmap(confusion_matrix(y_test, d_pred), annot=True, cmap='coolwarm', ax=ax[0]).set_title('Decision Tree Classifier')\n",
     "\n",
-    "#confusion matrix for Random Forest Classifier\n",
-    "sns.heatmap(confusion_matrix(y_test,r_pred), annot=True, cmap='coolwarm', ax=ax[1]).set_title('Random Forest Classifier')\n",
+    "# Step 4: Generate and display the confusion matrix for the Random Forest Classifier on the second subplot (middle)\n",
+    "sns.heatmap(confusion_matrix(y_test, r_pred), annot=True, cmap='coolwarm', ax=ax[1]).set_title('Random Forest Classifier')\n",
     "\n",
-    "#confusion matrix for Logistic Regression\n",
-    "sns.heatmap(confusion_matrix(y_test,l_pred), annot=True, cmap='coolwarm', ax=ax[2]).set_title('Logistic Regression')"
+    "# Step 5: Generate and display the confusion matrix for Logistic Regression on the third subplot (rightmost)\n",
+    "sns.heatmap(confusion_matrix(y_test, l_pred), annot=True, cmap='coolwarm', ax=ax[2]).set_title('Logistic Regression')"
    ]
   },
   {
